add: apollo client graphql

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@apollo/client": "^3.10.2",
 		"@emotion/react": "^11.11.4",
 		"@emotion/styled": "^11.11.5",
 		"@fontsource/roboto": "^5.0.13",
 		"@mui/icons-material": "^5.15.16",
 		"@mui/material": "^5.15.16",
+		"graphql": "^16.8.1",
 		"next": "14.2.3",
 		"react": "^18",
 		"react-dom": "^18"
